fix: USER 권한 부여